[package]
name = "fast-lcs"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/reflex-dev/lcs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fast_lcs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27"
